--- a/src/Relax/Relax.csproj
+++ b/src/Relax/Relax.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Impl\ViewResult.cs" />
     <Compile Include="Impl\ViewRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelaxAssimilation.cs" />
     <Compile Include="RelaxConfiguration.cs" />
     <Compile Include="RelaxConfigurationException.cs" />
   </ItemGroup>
