--- a/tests/Relax.Tests.csproj
+++ b/tests/Relax.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Document\with_custom_document_simple_key.cs" />
     <Compile Include="Mocks\with_mock_repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\when_filtering_type_tokens_out_of_bulk_insert.cs" />
     <Compile Include="Serialization\when_serializing_document_graph.cs" />
     <Compile Include="Server\when_cleaning_up_views.cs" />
     <Compile Include="Server\when_compacting_db.cs" />
