Refactoring to command pattern

--- a/src/Relax/Relax.csproj
+++ b/src/Relax/Relax.csproj
@@ -33,46 +33,61 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ApplicationServices\CouchMembershipDocument.cs" />
     <Compile Include="ApplicationServices\CouchMembershipProvider.cs" />
-    <Compile Include="BaseDocument.cs" />
+    <Compile Include="ApplicationServices\UserViews.cs" />
+    <Compile Include="Impl\Commands\AttachmentCommand.cs" />
+    <Compile Include="Impl\Commands\BaseCouchCommand.cs" />
+    <Compile Include="Impl\Commands\ChangeStreamCommand.cs" />
+    <Compile Include="Impl\Commands\CommandResult.cs" />
+    <Compile Include="Impl\Commands\DeleteDocumentCommand.cs" />
+    <Compile Include="Impl\Commands\GetDocumentsCommand.cs" />
+    <Compile Include="Impl\Commands\GetFromViewCommand.cs" />
+    <Compile Include="Impl\Commands\SaveDocumentCommand.cs" />
+    <Compile Include="Impl\Model\DesignView.cs" />
+    <Compile Include="Impl\Commands\GetDocumentCommand.cs" />
+    <Compile Include="Impl\Json\KeyList.cs" />
+    <Compile Include="Impl\Model\BaseDocument.cs" />
     <Compile Include="ChangeRecord.cs" />
-    <Compile Include="CouchDocument.cs" />
+    <Compile Include="Impl\Model\ComplexCouchDocument.cs" />
     <Compile Include="ICouchServer.cs" />
-    <Compile Include="IHandleJsonDocumentId.cs" />
-    <Compile Include="IHandleJsonDocumentRevision.cs" />
-    <Compile Include="IHaveAttachments.cs" />
+    <Compile Include="Impl\Model\IHandleJsonDocumentId.cs" />
+    <Compile Include="Impl\Model\IHandleJsonDocumentRevision.cs" />
+    <Compile Include="Impl\Model\IHaveAttachments.cs" />
     <Compile Include="Impl\BaseCouchDbController.cs" />
-    <Compile Include="Impl\BulkResponse.cs" />
-    <Compile Include="Impl\CacheKeyBuilder.cs" />
-    <Compile Include="Impl\ChildDocumentContractResolver.cs" />
-    <Compile Include="Impl\CouchCacheProvider.cs" />
-    <Compile Include="Impl\CouchCommand.cs" />
-    <Compile Include="Impl\CouchCommandFactory.cs" />
-    <Compile Include="Impl\CouchConfiguration.cs" />
+    <Compile Include="Impl\Json\BulkResponse.cs" />
+    <Compile Include="Impl\Cache\CacheKeyBuilder.cs" />
+    <Compile Include="Impl\Serialization\ChildDocumentWritingContractResolver.cs" />
+    <Compile Include="Impl\Serialization\ConventionContractResolver.cs" />
+    <Compile Include="Impl\Serialization\ConventionContractResolverStrategy.cs" />
+    <Compile Include="Impl\Cache\CouchCacheProvider.cs" />
+    <Compile Include="Impl\Http\HttpAction.cs" />
+    <Compile Include="Impl\Commands\CouchCommandFactory.cs" />
+    <Compile Include="Impl\Configuration\CouchConfiguration.cs" />
     <Compile Include="CouchConfigurator.cs" />
-    <Compile Include="DefaultCouchDocument.cs" />
+    <Compile Include="CouchDocument.cs" />
     <Compile Include="ICouchDocument.cs" />
     <Compile Include="IDocumentRepository.cs" />
-    <Compile Include="Impl\BaseDocumentRepository.cs" />
-    <Compile Include="Impl\BulkPersist.cs" />
-    <Compile Include="Impl\CachedDocumentRepository.cs" />
+    <Compile Include="Impl\Repository\BaseDocumentRepository.cs" />
+    <Compile Include="Impl\Json\BulkPersist.cs" />
+    <Compile Include="Impl\Repository\CachedDocumentRepository.cs" />
     <Compile Include="Impl\CouchDbServer.cs" />
-    <Compile Include="Impl\CouchURI.cs" />
-    <Compile Include="Impl\DesignDocument.cs" />
-    <Compile Include="Impl\DocumentRepository.cs" />
+    <Compile Include="Impl\Http\CouchURI.cs" />
+    <Compile Include="Impl\Model\DesignDocument.cs" />
+    <Compile Include="Impl\Repository\DocumentRepository.cs" />
     <Compile Include="Impl\Feed.cs" />
-    <Compile Include="Impl\ICacheKeyBuilder.cs" />
-    <Compile Include="Impl\ICouchCacheProvider.cs" />
-    <Compile Include="Impl\ICouchCommand.cs" />
-    <Compile Include="Impl\ICouchCommandFactory.cs" />
-    <Compile Include="Impl\ICouchConfiguration.cs" />
-    <Compile Include="Impl\NewRevision.cs" />
-    <Compile Include="Impl\ReplicationCommand.cs" />
-    <Compile Include="Impl\ViewQuery.cs" />
-    <Compile Include="JsonDocument.cs" />
-    <Compile Include="Impl\SaveResponse.cs" />
-    <Compile Include="Impl\ViewResult.cs" />
-    <Compile Include="Impl\ViewRow.cs" />
+    <Compile Include="Impl\Cache\ICacheKeyBuilder.cs" />
+    <Compile Include="Impl\Cache\ICouchCacheProvider.cs" />
+    <Compile Include="Impl\Http\IHttpAction.cs" />
+    <Compile Include="Impl\Configuration\ICouchConfiguration.cs" />
+    <Compile Include="Impl\Json\NewRevision.cs" />
+    <Compile Include="Impl\Serialization\DocumentConventions.cs" />
+    <Compile Include="Impl\Commands\ReplicationCommand.cs" />
+    <Compile Include="Impl\Commands\ViewQuery.cs" />
+    <Compile Include="Impl\Model\JsonDocument.cs" />
+    <Compile Include="Impl\Json\SaveResponse.cs" />
+    <Compile Include="Impl\Json\ViewResult.cs" />
+    <Compile Include="Impl\Json\ViewRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelaxAssimilation.cs" />
     <Compile Include="RelaxConfiguration.cs" />
