Working on separating and saving document graphs

--- a/tests/Relax.Tests.csproj
+++ b/tests/Relax.Tests.csproj
@@ -104,17 +104,17 @@
     <Compile Include="Mocks\with_mock_repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\with_from_view_command.cs" />
-    <Compile Include="Serialization\ClassA.cs" />
-    <Compile Include="Serialization\ClassB.cs" />
-    <Compile Include="Serialization\ClassC.cs" />
-    <Compile Include="Serialization\ClassD.cs" />
-    <Compile Include="Serialization\ClassE.cs" />
-    <Compile Include="Serialization\ClassF.cs" />
+    <Compile Include="Serialization\Filtering\ClassA.cs" />
+    <Compile Include="Serialization\Filtering\ClassB.cs" />
+    <Compile Include="Serialization\Filtering\ClassC.cs" />
+    <Compile Include="Serialization\Filtering\ClassD.cs" />
+    <Compile Include="Serialization\Filtering\ClassE.cs" />
+    <Compile Include="Serialization\Filtering\ClassF.cs" />
+    <Compile Include="Serialization\Filtering\when_serializing_complex_graph.cs" />
+    <Compile Include="Serialization\Filtering\with_test_graph.cs" />
     <Compile Include="Serialization\Test.cs" />
-    <Compile Include="Serialization\TestResolver.cs" />
     <Compile Include="Serialization\with_bulk_insert.cs" />
     <Compile Include="Serialization\when_serializing_bulk_insert.cs" />
-    <Compile Include="Serialization\when_serializing_document_graph.cs" />
     <Compile Include="Serialization\with_assimilation.cs" />
     <Compile Include="Serialization\when_trying_custom_serializer.cs" />
     <Compile Include="Serialization\with_complex_document.cs" />
