Fixing several bugs and rounding out new features in preparation for an RC

--- a/src/Relax/Relax.csproj
+++ b/src/Relax/Relax.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Impl\Commands\GetFromViewCommand.cs" />
     <Compile Include="Impl\Commands\SaveDocumentCommand.cs" />
     <Compile Include="Impl\Commands\ServerCommand.cs" />
+    <Compile Include="Impl\DocumentHierarchyWatcher.cs" />
+    <Compile Include="Impl\Serialization\ChildDocumentContractResolver.cs" />
+    <Compile Include="Impl\Serialization\ConventionDeserializationContractResolver.cs" />
     <Compile Include="Impl\UtilityExtensions.cs" />
     <Compile Include="Impl\Model\DesignView.cs" />
     <Compile Include="Impl\Commands\GetDocumentCommand.cs" />
@@ -60,8 +63,8 @@
     <Compile Include="Impl\Model\IHaveAttachments.cs" />
     <Compile Include="Impl\Json\BulkResponse.cs" />
     <Compile Include="Impl\Cache\CacheKeyBuilder.cs" />
-    <Compile Include="Impl\Serialization\ChildDocumentWritingContractResolver.cs" />
-    <Compile Include="Impl\Serialization\ConventionContractResolver.cs" />
+    <Compile Include="Impl\Serialization\ChildDocumentResolverStrategy.cs" />
+    <Compile Include="Impl\Serialization\ConventionSerializationContractResolver.cs" />
     <Compile Include="Impl\Serialization\ConventionContractResolverStrategy.cs" />
     <Compile Include="Impl\Cache\CouchCacheProvider.cs" />
     <Compile Include="Impl\Http\HttpAction.cs" />
