--- a/src/Relax.Lucene/Relax.Lucene.csproj
+++ b/src/Relax.Lucene/Relax.Lucene.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{EAC2B6B2-8F3C-49A8-88B0-DA6CC04C4935}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Relax.Lucene</RootNamespace>
     <AssemblyName>Relax.Lucene</AssemblyName>
@@ -29,6 +29,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Enyim.Caching">
@@ -58,6 +61,12 @@
     <Reference Include="Symbiote.Log4Net">
       <HintPath>..\..\lib\Symbiote.Log4Net.dll</HintPath>
     </Reference>
+    <Reference Include="Symbiote.Lucene">
+      <HintPath>..\..\lib\Symbiote.Lucene.dll</HintPath>
+    </Reference>
+    <Reference Include="Symbiote.Restfully">
+      <HintPath>..\..\lib\Symbiote.Restfully.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -70,8 +79,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="RelaxIndexingService.cs" />
+    <Compile Include="IRelaxLuceneConfiguration.cs" />
+    <Compile Include="JsonVisitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelaxLuceneAssimilation.cs" />
+    <Compile Include="RelaxLuceneConfiguration.cs" />
+    <Compile Include="RelaxLuceneConfigurator.cs" />
+    <Compile Include="RelaxQueryService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Relax\Relax.csproj">
+      <Project>{3A8D40A3-96F9-4878-902E-7CBC3A82AEDD}</Project>
+      <Name>Relax</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
