--- a/src/Relax/Relax.csproj
+++ b/src/Relax/Relax.csproj
@@ -70,8 +70,8 @@
     <Compile Include="Impl\Cache\CouchCacheProvider.cs" />
     <Compile Include="Impl\Http\HttpAction.cs" />
     <Compile Include="Impl\Commands\CouchCommandFactory.cs" />
-    <Compile Include="Impl\Configuration\CouchConfiguration.cs" />
-    <Compile Include="CouchConfigurator.cs" />
+    <Compile Include="Config\CouchConfiguration.cs" />
+    <Compile Include="Config\CouchConfigurator.cs" />
     <Compile Include="CouchDocument.cs" />
     <Compile Include="ICouchDocument.cs" />
     <Compile Include="IDocumentRepository.cs" />
@@ -86,7 +86,7 @@
     <Compile Include="Impl\Cache\ICacheKeyBuilder.cs" />
     <Compile Include="Impl\Cache\ICouchCacheProvider.cs" />
     <Compile Include="Impl\Http\IHttpAction.cs" />
-    <Compile Include="Impl\Configuration\ICouchConfiguration.cs" />
+    <Compile Include="Config\ICouchConfiguration.cs" />
     <Compile Include="Impl\Json\NewRevision.cs" />
     <Compile Include="Impl\Serialization\DocumentConventions.cs" />
     <Compile Include="Impl\Json\ReplicationCommand.cs" />
@@ -95,10 +95,11 @@
     <Compile Include="Impl\Json\SaveResponse.cs" />
     <Compile Include="Impl\Json\ViewResult.cs" />
     <Compile Include="Impl\Json\ViewRow.cs" />
+    <Compile Include="IRelaxQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelaxAssimilation.cs" />
-    <Compile Include="RelaxConfiguration.cs" />
-    <Compile Include="RelaxConfigurationException.cs" />
+    <Compile Include="Config\RelaxConfiguration.cs" />
+    <Compile Include="Config\RelaxConfigurationException.cs" />
     <Compile Include="RelaxException.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -114,6 +115,7 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
