--- a/src/Relax/Relax.csproj
+++ b/src/Relax/Relax.csproj
@@ -33,6 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Impl\Cache\DefaultKeyAssociationManager.cs" />
+    <Compile Include="Impl\Cache\IKeyAssociationManager.cs" />
     <Compile Include="Impl\ExpressionTreeProcessor.cs" />
     <Compile Include="Impl\Commands\DeleteAttachmentCommand.cs" />
     <Compile Include="Impl\Commands\BaseCouchCommand.cs" />
